--- a/src/app/welcome/wel.html
+++ b/src/app/welcome/wel.html
@@ -1,66 +1,35 @@
   <div class="Welcome">
   <mat-stepper [linear]="isLinear" #stepper>
     <!-- Step 1: Welcome Card -->
-    <mat-step>
-      <ng-template matStepLabel>Welcome</ng-template>
-      <div class="center-container">
-        <mat-card class="example-card" appearance="outlined">
-          <mat-card-header>
-
-            <mat-card-title>🌱 Plant your Health</mat-card-title>
-            <mat-icon>plant</mat-icon>
-            <mat-card-subtitle> We welcome you</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <p>
-              Hey buddy 👋 Welcome to Plant Your Health! This is your little corner to track wellness, stay motivated,
-              and grow healthier every day 🌿.
-              Let’s make health fun and simple — just like chatting with a friend 💚.
-            </p>
-            <p style="text-align: center;">
-              Warm welcome to plant your health buddy!!
-              <mat-icon>favorite</mat-icon>
-            </p>
-          </mat-card-content>
-          <mat-card-actions>
-            <div class="getstarted">
-              <button mat-button matStepperNext routerLink="/login">Get Started</button>
-
-              <mat-icon matSuffix>touch_app</mat-icon>
-            </div>
-          </mat-card-actions>
-        </mat-card>
-      </div>
-    </mat-step>
-
-
+  
   <!-- Step 2: Routed Content (Login/Signup) -->
-  <mat-step>
-    <ng-template matStepLabel>Login/Signup</ng-template>
-      <Login_Signup></Login_Signup>
-      <div class="step-actions">
-      <button matButton matStepperPrevious routerLink="/login">Back</button>
-      <button matButton matStepperNext routerLink="/profile">Next</button>
-      </div>
-</mat-step>
+
   <!-- Step 3: Done -->
   <mat-step>
     <ng-template matStepLabel>Start</ng-template>
       <Profile_Setup></Profile_Setup>
       <div class="step-actions step-actions-footer">
-      <button matButton matStepperPrevious routerLink="/profile">Back</button>
-      <button matButton matStepperNext routerLink="/activities">Next</button>
+      <button matButton matStepperNext >Next</button>
       </div>
     
   </mat-step>
     <mat-step>
     <ng-template matStepLabel>Activities</ng-template>
-      <router-outlet></router-outlet>
+      <activities></activities>
       <div class="step-actions step-actions-footer">
       <button matButton matStepperPrevious>Back</button>
-      <button matButton (click)="stepper.reset()">Reset</button>
+      <button matButton matStepperNext >Next</button>
       </div>
       </mat-step>
+      <mat-step>
+      <ng-template matStepLabel>Dashboard</ng-template>
+      <dashboard></dashboard>
+      <div class="step-actions step-actions-footer">
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-button (click)="stepper.reset()">Reset</button>
+      </div>
+    </mat-step>
+
 </mat-stepper>
 
 </div>
